# banner

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  Taskfile.yml  api.go  bacon.toml  build.rs  commands.go  diesel.toml  errors.go  go.mod  go.sum  helpers.go  logs.go  main.go  meta.go  register.go  scrape.go  search.go  session.go  term.go  types.go
.cargo/: audit.toml  config.toml
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: ci.yml  release.yml
cmd/banner/: main.go
docs/: ARCHITECTURE.md  BANNER.md  CHANGELOG.md  FEATURES.md  README.md  ROADMAP.md  RUST.md  STYLE.md  SVELTE.md  Sessions.md
docs/samples/meta/: getTerms.json
docs/samples/search/: searchResults_500.json
internal/: errors.go  helpers.go  meta.go
internal/api/: api.go  scrape.go  search.go  session.go  term.go
internal/bot/: bot.go  commands.go  handlers.go  state.go
internal/config/: config.go  logging.go  terms.go
internal/models/: types.go
internal/utils/: errors.go  helpers.go  logs.go  meta.go  term.go
json/: getClassDetails.html  getCorequisites.html  getCourseDescription.html  getFees.html  getSectionPrerequisites.html  get_instructionalMethod.json  searchResults.json  searchResults_malware.json
migrations/: 20250829175305_initial_schema.sql  20251103093649_add_retry_tracking.sql  20251103104300_add_performance_indexes.sql  20251103104400_optimize_indexes.sql  20260128000000_expand_course_schema.sql  20260128100000_add_rmp_professors.sql  20260129183411_add_queued_at_to_scrape_jobs.sql  20260129200000_add_users_and_sessions.sql  20260130000000_collapse_instructors.sql  20260131000000_instructor_rmp_links.sql  20260131100000_add_scrape_job_results.sql  20260131200000_timeline_indexes.sql  20260131300000_add_instructor_name_columns.sql  20260203134822_create_terms_table.sql  20260203135937_fix_terms_year_constraint.sql
migrations/2025-08-27-231618_setup/: down.sql  up.sql
samples/: getEnrollmentInfo.html  getFacultyMeetingTimes.json  getLinkedSections.html  getRestrictions.html  getSectionBookstoreDetails.html
samples/course/: getSectionAttributes.html  getXlistSections.html
samples/meta/: get_attribute.json  get_campus.json  get_instructor.json  get_partOfTerm.json  get_subject.json
samples/search/: searchResults_CS500.json
scripts/: bindings.ts  build.ts  check.ts  db.ts  dev.ts  package.json  test.ts  tsconfig.json
scripts/lib/: fmt.ts  proc.ts
src/: app.rs  app_state.rs  calendar.rs  cli.rs  error.rs  formatter.rs  lib.rs  logging.rs  main.rs  shutdown.rs  signals.rs  state.rs  status.rs
src/banner/: api.rs  errors.rs  json.rs  middleware.rs  mod.rs  query.rs  rate_limit_middleware.rs  rate_limiter.rs  scraper.rs  session.rs  util.rs
src/banner/middleware/: mod.rs  rate_limit.rs
src/banner/models/: common.rs  courses.rs  meetings.rs  mod.rs  search.rs  terms.rs
src/bot/: mod.rs  utils.rs
src/bot/commands/: gcal.rs  ics.rs  mod.rs  search.rs  terms.rs  time.rs
src/config/: mod.rs
src/data/: batch.rs  course_types.rs  courses.rs  mod.rs  models.rs  names.rs  reference.rs  reference_types.rs  rmp.rs  rmp_matching.rs  schema.rs  scrape_jobs.rs  sessions.rs  terms.rs  users.rs
src/db/: context.rs  courses.rs  mod.rs  scrape_jobs.rs
src/events/: buffer.rs  mod.rs  types.rs
src/rmp/: mod.rs
src/scraper/: adaptive.rs  mod.rs  scheduler.rs  worker.rs
src/scraper/jobs/: mod.rs  subject.rs
src/services/: bot.rs  dummy.rs  manager.rs  mod.rs  web.rs
src/utils/: mod.rs  shutdown.rs
src/web/: admin.rs  admin_rmp.rs  admin_scraper.rs  admin_terms.rs  assets.rs  audit.rs  auth.rs  calendar.rs  delivery.rs  encoding.rs  error.rs  extractors.rs  mod.rs  routes.rs  schedule_cache.rs  session_cache.rs  timeline.rs  ws.rs
src/web/stream/: computed.rs  filters.rs  handler.rs  mod.rs  protocol.rs  subscriptions.rs
src/web/stream/streams/: audit_log.rs  mod.rs  scrape_jobs.rs
tests/: admin_rmp.rs  basic_test.rs  config_test.go  course_search_alphanumeric.rs  course_search_days.rs  course_search_filters.rs  db_batch_upsert.rs  db_context_events.rs  db_scrape_jobs.rs  term_test.go
tests/helpers/: mod.rs
web/: .gitignore  biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
web/.storybook/: main.ts  preview.ts  vitest.setup.ts
web/public/: manifest.json
web/scripts/: compress-assets.ts
web/src/: App.css  app.d.ts  app.html  main.tsx  reportWebVitals.ts  styles.css
web/src/components/: ThemeToggle.tsx
web/src/lib/: api.test.ts  api.ts  auth.svelte.ts  course.test.ts  course.ts  date-utils.ts  date.ts  diff.test.ts  diff.ts  filterValues.ts  filters.ts  labels.ts  scroll-fade.ts  term-format.test.ts  term-format.ts  time.ts  utils.ts  ws.ts
web/src/lib/__tests__/: course.test.ts  filters.test.ts  scroll-fade.test.ts
web/src/lib/bindings/: AdminServiceInfo.ts  AdminStatusResponse.ts  ApiError.ts  ApiErrorCode.ts  Attribute.ts  AuditLogEntry.ts  AuditLogFilter.ts  AuditLogResponse.ts  Campus.ts  CandidateResponse.ts  CodeDescription.ts  CourseResponse.ts  CreditHours.ts  CrossList.ts  DateRange.ts  DayOfWeek.ts  DbMeetingTime.ts  DbTerm.ts  DeliveryMode.ts  Enrollment.ts  FilterRanges.ts  HybridVariant.ts  InstructionalMethod.ts  InstructorDetail.ts  InstructorDetailResponse.ts  InstructorListItem.ts  InstructorResponse.ts  InstructorStats.ts  LinkedRmpProfile.ts  ListInstructorsParams.ts  ListInstructorsResponse.ts  MatchBody.ts  MeetingLocation.ts  MetricEntry.ts  MetricsParams.ts  MetricsResponse.ts  OkResponse.ts  OnlineVariant.ts  PartOfTerm.ts  RejectCandidateBody.ts  (+50 more)
web/src/lib/components/: AttributeSection.svelte  AttributesPopover.svelte  AvailabilityFilter.stories.svelte  AvailabilityFilter.svelte  (+47 more)
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts  __root.tsx  index.tsx  layout.css
(+70 files in other folders)
